# Cardano-Smart-Contract-Direct-Sale

./: README.md  direct-sale.cabal
app/: Main.hs
scripts/: compile.sh  generate-datums.sh
scripts/core/: swap-buy-tx.sh  swap-buyer-has-nft-tx.sh
scripts/failure-cases/: double-swap.sh  nft-goes-wrong-address-tx.sh  too-little-ada-fees.sh  too-little-ada-royalties.sh  too-little-ada-swap-tx.sh  wrong-nft-swap-tx.sh
scripts/happy-path/: cancel-2-tx.sh  cancel-tx.sh  lock-2-tx.sh  lock-tx.sh  swap-high-royalty-tx.sh  swap-tx.sh  update-tx.sh
scripts/mainnet/: buy.addr
scripts/minting/: mint-0-policy.sh
scripts/scratch/: burn-utxo.sh
scripts/tests/: missing-royalty.sh
src/Canonical/: DirectSale.hs
